# poc

./: empenho_exemplo.csv  main.py  pyproject.toml  requirements.txt
