[tool.poetry]
name = "portal-transparencias"
version = "0.1.0"
description = ""
authors = ["Vinicius Mesel <vinicius@pyjobs.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
gunicorn = "^20.0.4"
pandas = "1.1.5"
numpy = "1.19.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
